--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -25,6 +25,8 @@ jobs:
               git clone https://${{secrets.pat}}@github.com/SahiruLakshan/builders.git /home/local/builders/
             else
               cd /home/local/builders/
+              # Mark the directory as safe for Git operations
+              git config --global --add safe.directory /home/local/builders/
               git pull origin main
             fi
 
