--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -26,7 +26,7 @@ jobs:
             else
               cd /home/local/builders/
               # Mark the directory as safe for Git operations
-              git config --global --add safe.directory /home/local/builders/
+              git config --global --add safe.directory /home/local/builders
               git pull origin main
             fi
 
