--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,9 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
           port: ${{ secrets.SERVER_PORT }}
-          script:
-            nvm use 20
-            # node -v
+          script: |
+            # nvm use 20
+            node -v
             # # Navigate to the directory where the project is located or clone it if it doesn't exist
             # if [ ! -d "/home/local/builders/" ]; then
             #   git clone https://${{secrets.pat}}@github.com/SahiruLakshan/builders.git /home/local/builders/
