--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,8 @@ jobs:
           port: ${{ secrets.SERVER_PORT }}
           script: |
             # nvm use 20
-            node -v
+            whoami
+          
             # # Navigate to the directory where the project is located or clone it if it doesn't exist
             # if [ ! -d "/home/local/builders/" ]; then
             #   git clone https://${{secrets.pat}}@github.com/SahiruLakshan/builders.git /home/local/builders/
