--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,46 +19,46 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
           port: ${{ secrets.SERVER_PORT }}
-          script: |
-            # nvm use 20
+          script: 
+            nvm use 20
             # node -v
           
-            # Navigate to the directory where the project is located or clone it if it doesn't exist
-            if [ ! -d "/home/local/builders/" ]; then
-              git clone https://${{secrets.pat}}@github.com/SahiruLakshan/builders.git /home/local/builders/
-              cd /home/local/builders/
-              composer install --no-interaction --prefer-dist --optimize-autoloader
-            else
-              cd /home/local/builders/
-              # Mark the directory as safe for Git operations
-              git config --global --add safe.directory /home/local/builders
-              git pull origin main
-            fi
+            # # Navigate to the directory where the project is located or clone it if it doesn't exist
+            # if [ ! -d "/home/local/builders/" ]; then
+            #   git clone https://${{secrets.pat}}@github.com/SahiruLakshan/builders.git /home/local/builders/
+            #   cd /home/local/builders/
+            #   composer install --no-interaction --prefer-dist --optimize-autoloader
+            # else
+            #   cd /home/local/builders/
+            #   # Mark the directory as safe for Git operations
+            #   git config --global --add safe.directory /home/local/builders
+            #   git pull origin main
+            # fi
 
-            # Navigate to the project directory
-            cd /home/local/builders/
+            # # Navigate to the project directory
+            # cd /home/local/builders/
 
 
-            #composer install --no-interaction --prefer-dist --optimize-autoloader
-            # Install dependencies via npm
-            npm install
-            #npm run prod
-            npm run build
-            # Set up the .env file
-            # cp .env.example .env
-            # php artisan key:generate
+            # #composer install --no-interaction --prefer-dist --optimize-autoloader
+            # # Install dependencies via npm
+            # npm install
+            # #npm run prod
+            # npm run build
+            # # Set up the .env file
+            # # cp .env.example .env
+            # # php artisan key:generate
 
-            # Set directory permissions
-            chown -R www-data:www-data /home/local/builders/
-            chmod -R 775 /home/local/builders/storage
-            chmod -R 775 /home/local/builders/bootstrap/cache
+            # # Set directory permissions
+            # chown -R www-data:www-data /home/local/builders/
+            # chmod -R 775 /home/local/builders/storage
+            # chmod -R 775 /home/local/builders/bootstrap/cache
 
-            # Run database migrations
-            # php artisan migrate --force
+            # # Run database migrations
+            # # php artisan migrate --force
 
-            # Cache configuration and routes (optional)
-            # php artisan config:cache
-            # php artisan route:cache
-            # php artisan view:cache
+            # # Cache configuration and routes (optional)
+            # # php artisan config:cache
+            # # php artisan route:cache
+            # # php artisan view:cache
 
-            # Restart services (e.g
+            # # Restart services (e.g
