--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           port: ${{ secrets.SERVER_PORT }}
           script: |
             # nvm use 20
-            # node -v
+            node -v
             pwd
           
             # # Navigate to the directory where the project is located or clone it if it doesn't exist
