--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:vtIe/j9UUQ5IbOcPa5WBT1bqVA0V9R3VwIieE+xsRBc=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
