--- a/.env
+++ b/.env
@@ -26,6 +26,13 @@ DB_DATABASE=builderlk
 DB_USERNAME=udara
 DB_PASSWORD=WJ-zN9H.nuPyXV9
 
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=builderlk
+# DB_USERNAME=root
+# DB_PASSWORD=
+
 
 
 SESSION_DRIVER=database
