--- a/.env
+++ b/.env
@@ -19,21 +19,19 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=172.245.168.200
-DB_PORT=3306
-DB_DATABASE=builderlk
-DB_USERNAME=udara
-DB_PASSWORD=WJ-zN9H.nuPyXV9
-
 # DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
+# DB_HOST=172.245.168.200
 # DB_PORT=3306
 # DB_DATABASE=builderlk
-# DB_USERNAME=root
-# DB_PASSWORD=
+# DB_USERNAME=udara
+# DB_PASSWORD=WJ-zN9H.nuPyXV9
 
-
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=builderlk
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
