--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      # - name: Checkout Repository
-      #   uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
       - name: Deploy to Server via SSH
         uses: appleboy/ssh-action@master
@@ -25,7 +25,7 @@ jobs:
             nvm use 20
             # node -v
             # pwd
-          
+
             # Navigate to the directory where the project is located or clone it if it doesn't exist
             if [ ! -d "/home/local/builders/" ]; then
               git clone https://${{secrets.pat}}@github.com/SahiruLakshan/builders.git /home/local/builders/
